# pseudonyws-server

./: Cargo.toml
src/: main.rs
static/: articles.json
