[package]
name = "pseudonyws-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = { version = "1.0", features=["derive"]}
rand = { version = "0.8.5" }
ws = { package="rocket_ws", version = "0.1.0" }
base64 = "0.22"
curve25519-dalek = "4.1.3"
acl = { path = "../acl" }
jsonwebtoken = { path = "../jsonwebtoken" }